--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,15 @@
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/pulibrary/CD-finder"
         }
     ],
     "require": {
         "composer/installers": "^1.9",
-        "cubear/finder": "dev-master",
+        "pulibrary/finder": "dev-master",
         "drupal/core-composer-scaffold": "^9",
         "drupal/core-project-message": "^9",
         "drupal/core-recommended": "^9",
