--- a/.lando.yml
+++ b/.lando.yml
@@ -8,3 +8,14 @@ services:
   appserver:
     build:
       - composer install
+  node:
+    type: node
+    globals:
+      gulp-cli: latest
+tooling:
+  npm:
+    service: node
+  node:
+    service: node
+  gulp:
+    service: node
