--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 # that core/assets/vendor and any other vendor directories within contrib or
 # custom module, theme, etc., are not ignored unless you purposely do so.
 /vendor/
+node_modules/
 
 # Ignore configuration files that may contain sensitive information.
 sites/*/settings*.php
