Adding content types

--- a/sites/default/config/core.entity_form_display.node.knowledge_base.default.yml
+++ b/sites/default/config/core.entity_form_display.node.knowledge_base.default.yml
@@ -1,20 +1,21 @@
-uuid: b3796312-59a3-4112-9ca2-06a980b0b4ab
+uuid: 5f462674-2657-4451-a374-af972a9e0b31
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.a_z_resource.body
-    - field.field.node.a_z_resource.field_resource_category
-    - field.field.node.a_z_resource.field_resource_link
-    - node.type.a_z_resource
+    - field.field.node.knowledge_base.body
+    - field.field.node.knowledge_base.field_category
+    - field.field.node.knowledge_base.field_images
+    - image.style.thumbnail
+    - node.type.knowledge_base
   module:
     - content_moderation
-    - link
+    - image
     - path
     - text
-id: node.a_z_resource.default
+id: node.knowledge_base.default
 targetEntityType: node
-bundle: a_z_resource
+bundle: knowledge_base
 mode: default
 content:
   body:
@@ -33,7 +34,7 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_resource_category:
+  field_category:
     weight: 123
     settings:
       match_operator: CONTAINS
@@ -43,13 +44,13 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  field_resource_link:
+  field_images:
     weight: 122
     settings:
-      placeholder_url: ''
-      placeholder_title: ''
+      progress_indicator: throbber
+      preview_image_style: thumbnail
     third_party_settings: {  }
-    type: link_default
+    type: image_image
     region: content
   moderation_state:
     type: moderation_state_default
