--- a/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -4,8 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.node.page.body
+    - field.field.node.page.field_basic_image
+    - image.style.thumbnail
     - node.type.page
+    - workflows.workflow.editorial
   module:
+    - content_moderation
+    - image
     - path
     - text
 _core:
@@ -30,6 +35,20 @@ content:
     weight: 10
     region: content
     settings: {  }
+    third_party_settings: {  }
+  field_basic_image:
+    weight: 121
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+    type: image_image
+    region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 100
+    settings: {  }
+    region: content
     third_party_settings: {  }
   path:
     type: path
