--- a/sites/default/config/field.field.node.training.body.yml
+++ b/sites/default/config/field.field.node.training.body.yml
@@ -1,21 +1,19 @@
-uuid: e515e88d-d639-4a36-b269-60ee39ba8f05
+uuid: 78ce4368-b3ab-4b0e-8951-fbdf60b00894
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.body
-    - node.type.article
+    - node.type.training
   module:
     - text
-_core:
-  default_config_hash: IjZnOLWk1Pjq3WRg2pLSA1ERh7Po7izCq_p6UztZr2c
-id: node.article.body
+id: node.training.body
 field_name: body
 entity_type: node
-bundle: article
+bundle: training
 label: Body
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
