--- a/sites/default/config/field.storage.node.field_basic_image.yml
+++ b/sites/default/config/field.storage.node.field_basic_image.yml
@@ -1,4 +1,4 @@
-uuid: 4459a0ff-30ad-427e-841f-5ee1af8b1da8
+uuid: 15085c94-d659-4411-842e-4590fc33df96
 langcode: en
 status: true
 dependencies:
@@ -6,10 +6,8 @@ dependencies:
     - file
     - image
     - node
-_core:
-  default_config_hash: SkXIPKZYiIMMtnBmfnxk58RYfbZ8cHSw5NZPY_JByME
-id: node.field_image
-field_name: field_image
+id: node.field_basic_image
+field_name: field_basic_image
 entity_type: node
 type: image
 settings:
@@ -25,10 +23,8 @@ settings:
   display_default: false
 module: image
 locked: false
-cardinality: 3
+cardinality: 5
 translatable: true
-indexes:
-  target_id:
-    - target_id
+indexes: {  }
 persist_with_no_fields: false
 custom_storage: false
