--- a/sites/default/config/node.type.knowledge_base.yml
+++ b/sites/default/config/node.type.knowledge_base.yml
@@ -1,4 +1,4 @@
-uuid: 059fe04d-5b6c-44d6-8722-ca2527235368
+uuid: e28ae8d1-a013-4d52-93e2-b169383368e7
 langcode: en
 status: true
 dependencies:
@@ -8,9 +8,9 @@ third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: 'A Z Resource'
-type: a_z_resource
-description: 'Content for the A to Z resource page'
+name: 'Knowledge Base'
+type: knowledge_base
+description: 'How To, FAQ, or Knowledge Base Item'
 help: ''
 new_revision: true
 preview_mode: 1
