--- a/sites/default/config/core.entity_view_display.node.article.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.article.teaser.yml
@@ -9,7 +9,7 @@ dependencies:
     - field.field.node.article.field_date
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
-    - image.style.medium
+    - image.style.article_teaser
     - node.type.article
   module:
     - image
@@ -40,7 +40,7 @@ content:
     weight: -1
     region: content
     settings:
-      image_style: medium
+      image_style: article_teaser
       image_link: content
     third_party_settings: {  }
     label: hidden
@@ -58,5 +58,4 @@ content:
 hidden:
   comment: true
   field_date: true
-  field_image: true
   field_tags: true
