--- a/sites/default/config/core.entity_view_display.node.knowledge_base.default.yml
+++ b/sites/default/config/core.entity_view_display.node.knowledge_base.default.yml
@@ -7,8 +7,9 @@ dependencies:
     - field.field.node.knowledge_base.field_category
     - field.field.node.knowledge_base.field_images
     - node.type.knowledge_base
+    - responsive_image.styles.news_image
   module:
-    - image
+    - responsive_image
     - text
     - user
 id: node.knowledge_base.default
@@ -19,12 +20,12 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 101
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     region: content
   field_category:
-    weight: 103
+    weight: 3
     label: above
     settings:
       link: true
@@ -32,17 +33,17 @@ content:
     type: entity_reference_label
     region: content
   field_images:
-    weight: 102
+    type: responsive_image
+    weight: 1
+    region: content
     label: above
     settings:
-      image_style: ''
+      responsive_image_style: news_image
       image_link: ''
     third_party_settings: {  }
-    type: image
-    region: content
   links:
-    weight: 100
+    weight: 0
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
