--- a/sites/default/config/image.style.thumbnail.yml
+++ b/sites/default/config/image.style.thumbnail.yml
@@ -7,11 +7,11 @@ _core:
 name: thumbnail
 label: 'Thumbnail (100×100)'
 effects:
-  1cfec298-8620-4749-b100-ccb6c4500779:
-    uuid: 1cfec298-8620-4749-b100-ccb6c4500779
-    id: image_scale
-    weight: 0
+  23fb7e1d-2637-4c68-88a5-b4a58427bdb9:
+    uuid: 23fb7e1d-2637-4c68-88a5-b4a58427bdb9
+    id: image_scale_and_crop
+    weight: 2
     data:
       width: 100
       height: 100
-      upscale: false
+      anchor: center-center
